# stereo-visual-odom

./: CMakeLists.txt  README.md
app/: main.cpp
config/: config.yaml
include/base_slam/: algorithm.hpp  backend.hpp  camera.hpp  common.hpp  config.hpp  dataset.hpp  feature.hpp  frame.hpp  frontend.hpp  g2o_types.hpp  kitti_dataset.hpp  map.hpp  mappoint.hpp  rs_dataset.hpp  viewer.hpp  visual_odom.hpp
src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  kitti_dataset.cpp  map.cpp  mappoint.cpp  rs_dataset.cpp  viewer.cpp  visual_odom.cpp
